--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dependencies": {
         "@headlessui/vue": "^1.7.15",
         "axios": "^1.8.2",
+        "lucide-vue-next": "^0.479.0",
         "pinia": "^3.0.1",
         "vue": "^3.5.13",
         "vue-router": "^4.5.0"
