--- a/.env
+++ b/.env
@@ -1,8 +1,9 @@
 
 
-VITE_API_BASE_URL=http://localhost:3000/v1/shop
+# VITE_API_BASE_URL=https://api.uni-mall-mn.shop/v1/shop
+ VITE_API_BASE_URL=http://localhost:3000/v1/shop
 
 
 # Facebook应用配置
-VITE_FACEBOOK_APP_ID=YOUR_FACEBOOK_APP_ID
+VITE_FACEBOOK_APP_ID=2880433938773539
 VITE_FACEBOOK_API_VERSION=v22.0
