--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "autoprefixer": "^10.4.14",
         "postcss": "^8.4.27",
         "tailwindcss": "^3.3.3",
+        "terser": "^5.39.0",
         "typescript": "~5.7.2",
         "vite": "^6.2.0",
         "vue-tsc": "^2.2.4"
