--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 
 
-# VITE_API_BASE_URL=https://api.uni-mall-mn.shop/v1/shop
- VITE_API_BASE_URL=http://localhost:3000/v1/shop
+VITE_API_BASE_URL=https://api.uni-mall-mn.shop/v1/shop
+#  VITE_API_BASE_URL=http://localhost:3000/v1/shop
 
 
 # Facebook应用配置
