--- a/.env
+++ b/.env
@@ -7,4 +7,4 @@ VITE_API_BASE_URL=https://api.uni-mall-mn.shop/v1/shop
 # Facebook应用配置
 VITE_FACEBOOK_APP_ID=2880433938773539
 VITE_FACEBOOK_API_VERSION=v22.0
-VITE_FACEBOOK_REDIRECT_URI=https://api.uni-mall-mn.shop/v1/shop/facebook/callback
+VITE_FACEBOOK_REDIRECT_URI=https://www.uni-mall-mn.shop/login
